Criada a função de incluir itens na lista e armazená-los no localStorage.

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <main class="conteudo">
         <div class="principal">
             <div class="mochila"></div>
-            <form action="" class="adicionar">
+            <form action="" class="adicionar" id="novo__item">
                 <label for="item">Nome</label>
                 <input type="text" name="nome" id="nome">
                 <label for="item">Quantidade</label>
@@ -24,7 +24,7 @@
             </form>
         </div>
         
-        <ul class="lista">
+        <ul class="lista" id="lista">
             <li class="item"><strong>7</strong>Camisas</li>
             <li class="item"><strong>1</strong>Calça</li>
             <li class="item"><strong>3</strong>Casaco</li>
@@ -36,5 +36,6 @@
             <li class="item"><strong>1</strong>Adaptador de tomada</li>
         </ul>
     </main>
+    <script src="js/main.js"></script>
 </body>
 </html>
